--- a/views/addCourier.ejs
+++ b/views/addCourier.ejs
@@ -33,61 +33,61 @@
             <div class="row">
                 <div class="input-field col s12 m6 l6">
                     <select name = "type">
-                      <option value="" disabled selected>Choose your option</option>
-                      <option value="speed">Speed Post</option>
+                      <option value="" disabled>Choose your option</option>
+                      <option value="speed" selected>Speed Post</option>
                       <option value="normal">Normal</option>
                     </select>
                     <label>Type of courier</label>
                 </div>
               
                 <div class="input-field col s12 m6 l6">
-                    <input id="srcname" name = "srcname" type="text" class="validate">
+                    <input id="srcname" value = "snads" name = "srcname" type="text" class="validate">
                     <label for="srcname">SENDER NAME</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input id="srcphone" name = "srcphone" type="tel" class="validate">
+                    <input id="srcphone" value = "1212" name = "srcphone" type="tel" class="validate">
                     <label for="srcphone">SENDER MOBILE</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input id="srcemail" name = "srcemail" type="text" class="validate">
+                    <input id="srcemail" value = "asdsas@fas" name = "srcemail" type="text" class="validate">
                     <label for="srcemail">SENDER EMAIL</label>
                 </div>
                 <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
-                    <input id="srcaddress" name = "srcaddress" type="text" class="validate">
+                    <input id="srcaddress" value = "sasdsa" name = "srcaddress" type="text" class="validate">
                     <label for="srcaddress">SOURCE ADDRESS</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input id="srcpin" name = "srcpin" type="text" class="validate">
+                    <input id="srcpin" value = "331322" name = "srcpin" type="text" class="validate">
                     <label for="srcpin">SOURCE PIN</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input id="destname" name = "destname" type="text" class="validate">
+                    <input id="destname" value = "dasssd" name = "destname" type="text" class="validate">
                     <label for="destname">RECEIVER NAME</label>
                 </div>
                 <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
-                    <input id="destaddress" name = "destaddress" type="text" class="validate">
+                    <input id="destaddress" value = "dadas" name = "destaddress" type="text" class="validate">
                     <label for="destaddress">DESTINATION ADDRESS</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input id="destpin" name = "destpin" type="text" class="validate">
+                    <input id="destpin" value = "21232" name = "destpin" type="text" class="validate">
                     <label for="destpin">DESTINATION  PIN</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input id="destphone" name = "destphone" type="text" class="validate">
+                    <input id="destphone" value = "23132" name = "destphone" type="text" class="validate">
                     <label for="destphone">RECEIVER MOBILE</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
-                    <input id="weight" name = "weight" type="text" class="validate">
+                    <input id="weight" value = "31" name = "weight" type="text" class="validate">
                     <label for="weigt">WEIGHT (Unit: Kg)</ltabel>
                 </div>
                   <div class="input-field col s12 m6 l6">
-                    <input id="size" name = "size" type="text" class="validate">
+                    <input id="size" value = "10*10" name = "size" type="text" class="validate">
                     <label for="size">SIZE (Units: meter, Format: w*h)</label>
                 </div>
                 <div class="input-field offset-l3 offset-m3 col s12 m6 l6">
                     <select name = "payment">
-                      <option value="" disabled selected>Choose your option</option>
-                      <option value="cash">CASH</option>
+                      <option value="" disabled>Choose your option</option>
+                      <option value="cash" selected>CASH</option>
                       <option value="card">CARD/NET BANKING</option>
                    </select>
                    <label>PAYMENT DETAIL</label>
