home page redesigned

--- a/views/addCourier.ejs
+++ b/views/addCourier.ejs
@@ -86,8 +86,8 @@
                 </div>
                 <div class="input-field offset-l3 offset-m3 col s12 m6 l6">
                     <select name = "payment">
-                      <option value="" disabled>Choose your option</option>
-                      <option value="cash" selected>CASH</option>
+                      <option value="" disabled selected>Choose your option</option>
+                      <option value="cash">CASH</option>
                       <option value="card">CARD/NET BANKING</option>
                    </select>
                    <label>PAYMENT DETAIL</label>
