--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,11 +26,6 @@
         opacity: 0.8;
     }
 
-    .addres{
-        width:500px;
-        height: 450px;
-    }
-
     body{
         background: #0288D1;
     }
@@ -68,26 +63,28 @@
     </nav>
    
      <div class="container" id="about">
-        <div class="row">
-            <div class="col s12 m12">
-                   
-                        <div class="card horizontal  z-depth-4">
-                                <div class="card-image">
-                                   <img src="/static/img/logo.png" height="350" width="350">
-                                 </div>
+        
+            <div class="card white">
+             <div class="row">
+                    <div class="col s12 m4 ">
+                            <div class="card-image">
+                               <img src="/static/img/logo.png" height="350" width="350">
+                             </div>
+                        </div>
+                <div class="col  s12 m8">
                                 <div class="card-stacked white">
                                      <div class="card-content">
                                         
-                                              <center> <p><h2 class = "blue-text darken-4">ABOUT</h2></p></center>
+                                          <center> <p><h2 class = "blue-text darken-4">ABOUT</h2></p></center>
                                                  <p class = "blue-text text-darken-3">Lighting courier companys an Indian courier delivery services company,
                                                        headquartered in Bangalore, Karnataka.
                                                     Lighting courier accesses the largest and most comprehensive express and logistics network worldwide, covering over 220 countries and territories and offers an entire spectrum of distribution services including air express, freight forwarding, supply chain solutions and customs clearance.</p>
                         
                                      </div>
-                               
-                                </div>
-                         </div>
-            </div>
+                                 </div>
+                 </div>
+                
+           </div>
         </div>
     </div>
     
@@ -121,13 +118,13 @@
             </div>
         </div>
     </div>
-
-    <div class="container" id="cards">
-        <div class="row">
-            <div class="col s12 m12">
-                <div class="card" style = "border-radius: 50px;">
-                      <div class="card horizontal" style = "border-radius: 50px;">
-                                <div class="addres " >
+    <div class="container" id="about">
+        
+            <div class="card white">
+             <div class="row">
+                    <div class="col s12 m4 ">
+                            
+                              
                                    <div class="row">
                                         <br>
                                         <center> <h5>  OFFICE ADDRESS</h5>
@@ -143,8 +140,10 @@
                                             +91 854 8866 227
                                                 </center>
                                      </div> 
-                                 </div>
-                                <div class="addres" width="40">
+                                       
+                   </div>
+                   <div class="col s12 m3 ">
+                            
                                      <div class="row"><br>
                                             <center><h5> Canada Office address</h5>
                                             Vitvara Techologies <br>
@@ -159,39 +158,41 @@
                                 
                                     </div>
                                
-                                </div>
-                                <div class="addres">
+                   </div>
+                   <div class="col s12 m4 ">
+                               
                                     <div class="card-content blue-text">
 
                                          <form action="/profile/contact" method = "POST"  class="col s12">
                                             <div class="row">
-                                                <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
                                                      <input id="name" name = "name" type="text" class="validate">
                                                      <label for="name">Name</label>
                                                 </div>
-                                                <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
                                                     <input id="email" name = "email" type="email" class="validate">
                                                     <label for="email">EMAIL</label>
                                                 </div>
-                                                 <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                 <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
                                                         <input id="mobile" name = "mobile" type="text" class="validate">
                                                          <label for="mobile">MOBILE NUMBER</label>
                                                  </div>
-                                                <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
+                                                <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
                                                      <input id="msg" name = "msg" type="text" class="validate">
                                                     <label for="msg">MESSAGE</label>
                                                  </div>
                 
                                              </div>
-                                             <center><button class = "btn waves-effect waves-light blue darken-2" id = "saveButton">Send</button>
+                                             <center><button class = "btn waves-effect waves-light blue darken-2 center" id = "saveButton">Send</button>
                                                  </center>
+                                                 <br>
                                          </form>
                                     </div>
-                                 </div>
+                               
                          </div>
                    
                       </div>
-            </div></div> </div>
+            </div></div> 
 
     <script src="/static/jquery.js"></script>
     <script src="/static/materialize/js/materialize.min.js"></script>
