--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/track">Track</a></li>
+                <li><a href="/auth/getTrackId">Track</a></li>
             </ul> 
 
             <ul class="sidenav" id="mobile-links">
@@ -56,7 +56,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/track">Track</a></li>
+                <li><a href="/auth/getTrackId">Track</a></li>
             </ul>
 
         </div>
@@ -118,9 +118,9 @@
             </div>
         </div>
     </div>
-    <div class="container" id="about">
+    <div class="container" id="contact">
         
-            <div class="card white">
+            <div class="card white" style = "border-radius: 50px;">
              <div class="row">
                     <div class="col s12 m4 ">
                             
@@ -178,8 +178,8 @@
                                                          <label for="mobile">MOBILE NUMBER</label>
                                                  </div>
                                                 <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
-                                                     <input id="msg" name = "msg" type="text" class="validate">
-                                                    <label for="msg">MESSAGE</label>
+                                                    <textarea id="textarea1" name = "msg" class="materialize-textarea"></textarea>
+                                                    <label for="textarea1">MESSAGE</label>
                                                  </div>
                 
                                              </div>
