--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,14 +10,14 @@
                 <li><a href="/profile/">Employees</a></li>
                 <li><a href="/profile/addCourier">Add Courier</a></li>
                 <li><a href="/profile/updateCourier">Update</a></li>
-                <li><a href="/profile/track">Track</a></li>
+                <li><a href="/profile/getTrackId">Track</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
             </ul>
             <ul class="sidenav grey lighten-2" id="mobile-menu">
                 <li><a href="/profile/">Employees</a></li>
                 <li><a href="/profile/addCourier">Add Courier</a></li>
                 <li><a href="/profile/updateCourier">Update</a></li>
-                <li><a href="/profile/track">Track</a></li>
+                <li><a href="/profile/getTrackId">Track</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
             </ul>
         </div>
