--- a/views/updateCourier.ejs
+++ b/views/updateCourier.ejs
@@ -65,7 +65,7 @@
                 </div>
             </form>
         </div>
-        <h4 id = "msg"></h4>
+        <h4 id = "msg" class = "indigo-text"></h4>
     </div>
 
     <script src="/static/jquery.js"></script>
