--- a/views/users.ejs
+++ b/views/users.ejs
@@ -58,23 +58,27 @@
                 <form action="/profile/addNewUser" method = "POST"  class="col s12">
                     <div class="row">
                         <div class="input-field col offset-l3 offset-m3 s12 m6 l6">
-                            <input id="name" name = "name" value = "" type="text" class="validate">
+                            <input id="name" name = "name" value = "" type="text" class="validate" required>
                             <label for="name">Full Name</label>
                         </div>
+                        <div class="input-field offset-l3 offset-m3 col s12 m6 l6">
+                            <select name = "post" required>
+                                <option value="Manager">Manager</option>
+                                <option value="Employee" selected>Employee</option>
+                                <option value="Shipper">Shipper</option>
+                            </select>
+                           <label>Designation</label>
+                       </div>
                         <div class="input-field col offset-l3 offset-m3 s12 m6 l6">
-                            <input id="post" name = "post" value = "" type="text" class="validate">
-                            <label for="post">Designation</label>
-                        </div>
-                        <div class="input-field col offset-l3 offset-m3 s12 m6 l6">
-                            <input id="email" name = "email" value = "" type="email" class="validate">
+                            <input id="email" name = "email" value = "" type="email" class="validate" required>
                             <label for="email">Email</label>
                         </div>
                         <div class="input-field col offset-l3 offset-m3 s12 m6 l6">
-                            <input id="mobile" name = "mobile" value = "" type="tel" class="validate">
+                            <input id="mobile" name = "mobile" value = "" type="tel" class="validate" required>
                             <label for="mobile">Mobile</label>
                         </div>
                         <div class="input-field col offset-l3 offset-m3 s12 m6 l6">
-                            <input id="address" name = "address" value = "" type="text" class="validate">
+                            <input id="address" name = "address" value = "" type="text" class="validate" required>
                             <label for="address">Address</label>
                         </div>
                     </div>
@@ -89,6 +93,7 @@
 
     <script>
         $(document).ready(function(){
+            $('select').formSelect();
             $(".sidenav").sidenav();
             $('.tooltipped').tooltip();
         });
