--- a/views/addCourier.ejs
+++ b/views/addCourier.ejs
@@ -24,7 +24,13 @@
 
     <header>
         <!-- include navbar -->
-        <% include partials/navbar.ejs %>
+        <% if(user.post === "Employee") { %>
+            <% include partials/navbarForEmployee.ejs %>
+        <% } else if(user.post === "Shipper") { %>
+            <% include partials/navbarForShipper.ejs %>    
+        <% } else { %>
+            <% include partials/navbarForManagerAndAdmin.ejs %>    
+        <% } %>
     </header>
 
     <div class="container add-container">
