--- a/views/getTrackId.ejs
+++ b/views/getTrackId.ejs
@@ -46,29 +46,16 @@
   <body>
 
     <header>
-        <nav class="nav-wrapper blue darken-3">
-            <div class="container">
-    
-                <a href="#" class="brand-logo">L-Courier</a>
-    
-                <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                    <i class="fa fa-bars"></i>
-                </a>
-    
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/auth/login">Login</a></li>
-                    <li><a href="/auth/getTrackId">Track</a></li>
-                </ul> 
-    
-                <ul class="sidenav" id="mobile-links">
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/auth/login">Login</a></li>
-                    <li><a href="/auth/getTrackId">Track</a></li>
-                </ul>
-    
-            </div>
-        </nav>
+        <!-- include navbar -->
+        <% if(!user) { %>
+            <% include partials/navbarForUnauthorizedUsers.ejs %>
+        <% } else if(user.post === "Employee") { %>
+            <% include partials/navbarForEmployee.ejs %>
+        <% } else if(user.post === "Shipper") { %>
+            <% include partials/navbarForShipper.ejs %>    
+        <% } else { %>
+            <% include partials/navbarForManagerAndAdmin.ejs %>    
+        <% } %>
     </header>
 
     <div class = "container" id = "track-container">
