--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,33 +34,10 @@
 
 <body>
     
-    <nav class="nav-wrapper blue darken-3">
-        <div class="container">
-
-            <a href="#" class="brand-logo">L-Courier</a>
-
-            <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                <i class="fa fa-bars"></i>
-            </a>
-
-            <ul class="right hide-on-med-and-down">
-                <li><a href="/home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/getTrackId">Track</a></li>
-            </ul> 
-
-            <ul class="sidenav" id="mobile-links">
-                <li><a href="/home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/getTrackId">Track</a></li>
-            </ul>
-
-        </div>
-    </nav>
+    <header>
+        <!-- include navbar -->
+        <% include partials/navbarForUnauthorizedUsers.ejs %>
+    </header>
    
      <div class="container" id="about">
         
