--- a/views/user.ejs
+++ b/views/user.ejs
@@ -6,31 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Profile</title>
     <link rel="stylesheet" href="/static/materialize/css/materialize.min.css">
-    <link href="/static/fontawesome-free-5.9.0-web/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/users-styles.css">
 </head>
 <body>
 
-    <header>
-        <!-- include navbar -->
-        <% if(user.post === "Employee") { %>
-            <% include partials/navbarForEmployee.ejs %>
-        <% } else if(user.post === "Shipper") { %>
-            <% include partials/navbarForShipper.ejs %>    
-        <% } else { %>
-            <% include partials/navbarForManagerAndAdmin.ejs %>    
-        <% } %>
-        
-    </header>
-
     <div class="container profile-container z-depth-4">
-        <h1>My Profile</h1>
+        <h1>Edit Details</h1>
         <form action="/profile/updateUser/<%= user.id %>" method = "POST"  class="col s12">
             <div class="row">
-                <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
-                    <input id="username" name = "username" value = "<%= user.username %>" type="text" class="validate">
-                    <label for="username">Username</label>
-                </div>
                 <div class="input-field col offset-l2 offset-m2 s12 m8 l8">
                     <input id="name" name = "name" value = "<%= user.name %>" type="text" class="validate">
                     <label for="name">Full Name</label>
@@ -52,22 +35,13 @@
                     <label for="address">Address</label>
                 </div>
             </div>
-            <!-- <button class = "btn waves-effect waves-light lighten-1" id = "saveBtn">Save</button>
-            <a href="/profile/" class = "btn waves-effect waves-light red lighten-1">Back</a> -->
+            <button class = "btn waves-effect waves-light lighten-1" id = "saveBtn">Save</button>
+            <a href="/profile/" class = "btn waves-effect waves-light red lighten-1">Back</a>
         </form>
     </div>
 
     <script src="/static/jquery.js"></script>
     <script src="/static/materialize/js/materialize.min.js"></script>
-
-    <script >
-        
-        $(document).ready(function(){
-            $('.sidenav').sidenav();
-        });
-            
-    
-    </script>
 
 </body>
 </html>
