--- a/views/users.ejs
+++ b/views/users.ejs
@@ -15,7 +15,13 @@
     
         <header>
             <!-- include navbar -->
-            <% include partials/navbar.ejs %>
+            <% if(user.post === "Employee") { %>
+                <% include partials/navbarForEmployee.ejs %>
+            <% } else if(user.post === "Shipper") { %>
+                <% include partials/navbarForShipper.ejs %>    
+            <% } else { %>
+                <% include partials/navbarForManagerAndAdmin.ejs %>    
+            <% } %>
         </header>
 
         <div class="container users-container z-depth-4">
