location can be shown on map

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -140,7 +140,7 @@
                                
                                     <div class="card-content blue-text">
 
-                                         <form action="/profile/contact" method = "POST"  class="col s12">
+                                         <form action="/contact" method = "POST"  class="col s12">
                                             <div class="row">
                                                 <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
                                                      <input id="name" name = "name" type="text" class="validate">
