--- a/views/getTrackId.ejs
+++ b/views/getTrackId.ejs
@@ -60,10 +60,10 @@
 
     <div class = "container" id = "track-container">
         <div class="row">
-            <form id = "trackForm" class="col s12" style = "margin-top: 20px;">
+            <form method = "POST" action = "/track/sendTrackId" id = "trackForm" class="col s12" style = "margin-top: 20px;">
                 <div class="row">
                     <div class="input-field col offset-m3 s8 m4">
-                        <input id="trackId" type="text" class="validate" required = "">
+                        <input id="trackId" name = "trackId" type="text" class="validate" required = "">
                         <label for="trackId">Package ID</label>
                     </div>
                     <div class="input-field col s4 m4" style = "text-align: left">
@@ -74,6 +74,7 @@
                 </div>
             </form>
         </div>
+        <h4 id = "msg"></h4>
         <video id="preview"></video>
     </div>
 
@@ -96,9 +97,10 @@
                 mirror: false
             }
         );
+        let tid = "";
         scanner.addListener('scan', function(content) {
             document.getElementById("trackId").value = content;
-            trackId = content;
+            tid = content;
         });
         Instascan.Camera.getCameras().then(cameras => 
         {
@@ -107,11 +109,6 @@
             } else {
                 console.error("Please enable Camera!");
             }
-        });
-
-        document.getElementById("trackForm").addEventListener("submit", (e) => {
-            e.preventDefault();
-            axios.post("/profile/update", { trackId: trackId }).then((res) => (console.log(res)));
         });  
     </script>
 
