--- a/views/track.ejs
+++ b/views/track.ejs
@@ -1,25 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Users</title>
+    <link rel="stylesheet" href="/static/materialize/css/materialize.min.css">
+    <link href="/static/fontawesome-free-5.9.0-web/css/all.css" rel="stylesheet">
+    <title>Lightning Courier</title>
+
+    <style>
+    #about{
+        margin-top: 40px;
+    }
+
+    #about .card, #about .card-stacked {
+        padding-left: 20px;
+        border-radius: 50px;
+    }
+
+    a {
+        font-size: 20px;
+    }
+
+   
+ 
+
+    body{
+        background: #0288D1;
+    }
+</style>
+</head>
 <body>
+    
+    <header>
+        <!-- include navbar -->
+        <% if(!user) { %>
+            <% include partials/navbarForUnauthorizedUsers.ejs %>
+        <% } else if(user.post === "Employee") { %>
+            <% include partials/navbarForEmployee.ejs %>
+        <% } else if(user.post === "Shipper") { %>
+            <% include partials/navbarForShipper.ejs %>    
+        <% } else { %>
+            <% include partials/navbarForManagerAndAdmin.ejs %>    
+        <% } %>
+    </header>
+		<div class="container" id="about">
+            <div class="card white"  style = "padding-top: 10px;">
+                <div class="card-title" >
+                    <h3 class = "center indigo-text">Current Location</h3>
+                </div>
+				 <div class="row">
+                     <center>
+                        <div class="input-field col offset-l2 offset-m2 s12 m8 l8" style = "display: none;">
+			            <input type="number" id="long" name = "lng" value = "<%= lng %>">
+						<input type="number" id="lat" name = "lat" value = "<%= lat %>">
+                        </div></center>
+				 </div>	
+                 <div class="row">
+					<center><iframe width="80%" height="500" style = "margin: 10px 0 20px 0;" id="gmap_canvas" src="https://maps.google.com/maps?api=1&q=&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" crossorigin="anonymous" scrolling="no" marginheight="0" marginwidth="0"></iframe></center>		
+				 </div>
+		    </div>
+        </div>
+        
+  
+    <script>
+			var long = document.getElementById('long');
+			var lat = document.getElementById('lat');
+			var map = document.getElementById('gmap_canvas');
+						
+			var main_query="https://maps.google.com/maps?api=1&q=";
+			var ending = "&t=&z=13&ie=UTF8&iwloc=&output=embed";
+							
+            var query = main_query + lat.value + "," + long.value + ending;
+            // let query = main_query + "574104" + ending;
+            map.src = query;
+							
+		</script>								
 
-<input type="number" id="long">
-<input type="number" id="lat">
-<input type="submit" onclick="load()" value="Locate">
-<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?api=1&q=&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" crossorigin="anonymous" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+    <script src="/static/jquery.js"></script>
+    <script src="/static/materialize/js/materialize.min.js"></script>
 
-<script>
-	var long = document.getElementById('long');
-	var lat = document.getElementById('lat');
-	var map = document.getElementById('gmap_canvas');
+    <script>
+        $(document).ready(function(){
+            $('.sidenav').sidenav();
+        });
+    </script>
 
-	var main_query="https://maps.google.com/maps?api=1&q=";
-	var ending = "&t=&z=13&ie=UTF8&iwloc=&output=embed";
-	
-	function load(){
-		var query = main_query + lat.value + "," + long.value + ending;
-		map.src = query;
-	}
-	
-</script>
+
 </body>
 </html> 
