--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
         font-size: 20px;
     }
 
-    #saveButton:hover {
+    #sendButton:hover {
         opacity: 0.8;
     }
 
@@ -140,27 +140,27 @@
                                
                                     <div class="card-content blue-text">
 
-                                         <form action="/contact" method = "POST"  class="col s12">
+                                         <form id = "contactForm"  class="col s12">
                                             <div class="row">
                                                 <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
-                                                     <input id="name" name = "name" type="text" class="validate">
+                                                     <input id="name" name = "name" type="text" class="validate" required>
                                                      <label for="name">Name</label>
                                                 </div>
                                                 <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
-                                                    <input id="email" name = "email" type="email" class="validate">
+                                                    <input id="email" name = "email" type="email" class="validate" required>
                                                     <label for="email">EMAIL</label>
                                                 </div>
                                                  <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
-                                                        <input id="mobile" name = "mobile" type="text" class="validate">
+                                                        <input id="mobile" name = "mobile" type="text" class="validate" required>
                                                          <label for="mobile">MOBILE NUMBER</label>
                                                  </div>
                                                 <div class="input-field col offset-l2 offset-m2 s12 m12 l12">
-                                                    <textarea id="textarea1" name = "msg" class="materialize-textarea"></textarea>
-                                                    <label for="textarea1">MESSAGE</label>
+                                                    <textarea id="textarea" name = "msg" class="materialize-textarea" required></textarea>
+                                                    <label for="textarea">MESSAGE</label>
                                                  </div>
                 
                                              </div>
-                                             <center><button class = "btn waves-effect waves-light blue darken-2 center" id = "saveButton">Send</button>
+                                             <center><button class = "btn waves-effect waves-light blue darken-2 center" id = "sendButton">Send</button>
                                                  </center>
                                                  <br>
                                          </form>
@@ -173,10 +173,36 @@
 
     <script src="/static/jquery.js"></script>
     <script src="/static/materialize/js/materialize.min.js"></script>
+    <script src="/static/js/axios.min.js"></script>
+
     <script>
+        const encodeForm = (data) => {
+            return Object.keys(data)
+                .map(key => encodeURIComponent(key) + '=' + encodeURIComponent(data[key]))
+                .join('&');
+        }
         $(document).ready(function(){
             $('.sidenav').sidenav();
-        })
+            $("#contactForm").on("submit", (e) => {
+                e.preventDefault();
+                let contactDetails = {
+                    name: $("#name").val(),
+                    email: $("#email").val(),
+                    mobile: $("#mobile").val(),
+                    msg: $("#textarea").val()
+                }
+                console.log(contactDetails);
+                axios.post("/contact", encodeForm(contactDetails), {headers: {'Accept': 'application/json'}})
+                    .then((res) => {
+                        M.toast({html: res.data});
+                        $("#name").val("");
+                        $("#email").val("");
+                        $("#mobile").val("");
+                        $("#textarea").val("");
+                    });
+            });
+        });
     </script>
+
 </body>
 </html>
