mail is sent when updated!

--- a/views/partials/navbarForManagerAndAdmin.ejs
+++ b/views/partials/navbarForManagerAndAdmin.ejs
@@ -12,6 +12,7 @@
                 <li><a href="/profile/addCourier">Add Courier</a></li>
                 <li><a href="/profile/updateCourier">Update</a></li>
                 <li><a href="/track/getTrackId">Track</a></li>
+                <li><a href="/contact/support">Support</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
             </ul>
             <ul class="sidenav grey lighten-2" id="mobile-menu">
@@ -20,6 +21,7 @@
                 <li><a href="/profile/addCourier">Add Courier</a></li>
                 <li><a href="/profile/updateCourier">Update</a></li>
                 <li><a href="/track/getTrackId">Track</a></li>
+                <li><a href="/contact/support">Support</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
             </ul>
         </div>
