--- a/views/user.ejs
+++ b/views/user.ejs
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <button class = "btn waves-effect waves-light lighten-1" id = "saveBtn">Save</button>
-            <a href="/profile/" class = "btn waves-effect waves-light red lighten-1">Back</a>
+            <a href="/profile/employees" class = "btn waves-effect waves-light red lighten-1">Back</a>
         </form>
     </div>
 
