navbar conditions added to single file

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
     
     <header>
         <!-- include navbar -->
-        <% include partials/navbarForUnauthorizedUsers.ejs %>
+        <% include partials/navbar.ejs %>
     </header>
    
      <div class="container" id="about">
