--- a/views/support.ejs
+++ b/views/support.ejs
@@ -15,7 +15,7 @@
     
         <header>
             <!-- include navbar -->
-            <% include partials/navbarForManagerAndAdmin.ejs %>    
+            <% include partials/navbar.ejs %>  
         </header>
 
         <div class="container users-container z-depth-4">
