--- a/views/getTrackId.ejs
+++ b/views/getTrackId.ejs
@@ -47,15 +47,7 @@
 
     <header>
         <!-- include navbar -->
-        <% if(!user) { %>
-            <% include partials/navbarForUnauthorizedUsers.ejs %>
-        <% } else if(user.post === "Employee") { %>
-            <% include partials/navbarForEmployee.ejs %>
-        <% } else if(user.post === "Shipper") { %>
-            <% include partials/navbarForShipper.ejs %>    
-        <% } else { %>
-            <% include partials/navbarForManagerAndAdmin.ejs %>    
-        <% } %>
+        <% include partials/navbar.ejs %>
     </header>
 
     <div class = "container" id = "track-container">
