--- a/views/partials/navbarForShipper.ejs
+++ b/views/partials/navbarForShipper.ejs
@@ -1,7 +1,7 @@
 <div >
     <nav class="nav-wrapper white blue darken-3">
         <div class="container">
-            <a href="#" class="brand-logo hide-on-small-only">L-Courier</a>
+            <a href="/" class="brand-logo hide-on-small-only">L-Courier</a>
             <a href="#" class="brand-logo hide-on-med-and-up">MENU</a>
             <a href="" class="sidenav-trigger" data-target="mobile-menu">
                 <i class="fa fa-bars"></i>
