--- a/views/partials/navbarForUnauthorizedUsers.ejs
+++ b/views/partials/navbarForUnauthorizedUsers.ejs
@@ -1,7 +1,7 @@
 <nav class="nav-wrapper blue darken-3">
     <div class="container">
 
-        <a href="#" class="brand-logo">L-Courier</a>
+        <a href="/" class="brand-logo">L-Courier</a>
 
         <a href="#" class="sidenav-trigger" data-target="mobile-links">
             <i class="fa fa-bars"></i>
