--- a/views/track.ejs
+++ b/views/track.ejs
@@ -35,16 +35,9 @@
     
     <header>
         <!-- include navbar -->
-        <% if(!user) { %>
-            <% include partials/navbarForUnauthorizedUsers.ejs %>
-        <% } else if(user.post === "Employee") { %>
-            <% include partials/navbarForEmployee.ejs %>
-        <% } else if(user.post === "Shipper") { %>
-            <% include partials/navbarForShipper.ejs %>    
-        <% } else { %>
-            <% include partials/navbarForManagerAndAdmin.ejs %>    
-        <% } %>
+        <% include partials/navbar.ejs %>
     </header>
+    
 		<div class="container" id="about">
             <div class="card white"  style = "padding-top: 10px;">
                 <div class="card-title" >
