--- a/views/updateCourier.ejs
+++ b/views/updateCourier.ejs
@@ -60,7 +60,7 @@
             <form class="col s12">
                 <div class="row">
                 <div class="input-field col offset-m4 s12 m4">
-                    <input id="trackId" name = "trackId" type="text" class="validate" placeholder="Package ID">
+                    <input id="trackId" name = "trackId" type="text" value="" class="validate" placeholder="Package ID">
                 </div>
                 </div>
             </form>
