--- a/views/getTrackId.ejs
+++ b/views/getTrackId.ejs
@@ -28,8 +28,12 @@
             margin-bottom: 25px;
         }
 
+        .row {
+            margin-bottom: 0;
+        }
+
         video {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         
         .btn:hover {
@@ -66,7 +70,6 @@
                 </div>
             </form>
         </div>
-        <h4 id = "msg"></h4>
         <video id="preview"></video>
     </div>
 
